Hardening of IOUtility.createTempDirectory
The return flag of the File methods delete and mkdirs should be
checked.

Side minor: fixed code style